--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.jnj.trainingm8"
+        applicationId "com.licarijd.jnj.trainingm8"
         minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
