--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        //The user taps anywhere on opening page to access next page (bodybuilder).
+        <activity
+            android:name="second_page"
+            android:label="@string/app_name">
+        </activity>
+
+
     </application>
 
 </manifest>
