--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
             android:label="@string/app_name">
         </activity>
 
+        <activity
+            android:name=".MainMenu"
+            android:label="@string/app_name">
+        </activity>
+
 
     </application>
 
