--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,50 @@
         //The user taps anywhere on opening page to access next page (bodybuilder).
         <activity
             android:name="SecondIntroPage"
-            android:label="@string/app_name">
+            android:label="Training M8">
         </activity>
 
         <activity
-            android:name=".MainMenu"
-            android:label="@string/app_name">
+            android:name="MainMenu"
+            android:label="Training M8">
+        </activity>
+
+        //Once in the main menu, user selects a calculator.
+
+        <activity
+            android:name="OneRepMax"
+            android:label="Training M8">
+        </activity>
+
+        <activity
+            android:name="PercentBodyFat"
+            android:label="Training M8">
+        </activity>
+
+        <activity
+            android:name="MaxHeartRate"
+            android:label="Training M8">
+        </activity>
+
+        <activity
+            android:name="MuscleComposition"
+            android:label="Training M8">
+        </activity>
+
+        <activity
+            android:name="BMI"
+            android:label="Training M8">
+        </activity>
+
+        <activity
+            android:name="VO2Max"
+            android:label="Training M8">
+        </activity>
+
+        //One Rep Max calculator brings up a separate results page.
+        <activity
+            android:name="OneRepMaxResults"
+            android:label="Training M8">
         </activity>
 
 
